JavaFX Helpers 1.8.1
* javafx-swing dependency moved to test scope